client/src/styles/questions.css
.appFormContainer .pageWrapper .questionContainer {
  margin-left: max(15%, 1rem);
  /* margin: 0 2rem; */
  margin: 0 6vw;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  position: relative;
  z-index: 1;
}

.questionContainer.fixWidth {
  width: 52vw;
  max-width: 52vw;
}

.questionContainer .question {
  /* margin-left: 1rem; */
  color: var(--Color-Primary);
  margin: 0;
  white-space: pre-line;
  font-weight: 600;
  display:flex;
}

.questionContainer .MuiAutocomplete-root {
  max-width: 500px;
}

.categoryText {
  color: #002F98A0;
  position: absolute;
  top: 6vh;
  left: 6vw;
  font-weight: 600;
}

.navBtnCont {
  position: absolute;
  bottom: -4rem;
  display: flex;
  gap: 2rem;
  margin-top: 1rem;
}

.navBtnCont .nextBtn {
  transform: rotate(0.75turn);
}

.navBtnCont .prevBtn {
  transform: rotate(0.25turn);
}

.navBtnCont .nextBtn,
.navBtnCont .prevBtn {
  border: none;
  background-color: transparent;
  color: var(--Color-Primary);
  font-size: 32px;
  padding: 0;
  cursor: pointer;
}

.navBtnCont .nextBtn:focus-visible svg,
.navBtnCont .prevBtn:focus-visible svg,
.navBtnCont .nextBtn:hover svg,
.navBtnCont .prevBtn:hover svg {
  fill: var(--Color-Primary);
  color: white;
}

.navBtnCont .nextBtn:focus-visible,
.navBtnCont .prevBtn:focus-visible {
  outline: none;
}

.questionContainer .MuiInputBase-root.MuiOutlinedInput-root:not(.MuiInputBase-multiline) {
  min-height: 56px;
  max-width: 500px;
}

.questionContainer .MuiInputBase-root.MuiOutlinedInput-root:not(.MuiInputBase-multiline):has(#investmentField) {
  min-height: 40px;
  margin-left: 2rem;
}

#investmentField {
  width: 100px;
}

.optionContainer {
  display: flex;
  cursor: pointer;
}

.imageBoxContainer {
  height: 160px;
  /* flex-grow: 1; */
  flex-basis: 25%;
  color: white;
  color: hsl(221, 100%, 30%);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.imageBoxContainer p {
  text-align: center;
  white-space: pre-line;
  font-size: 14px;
}

.imageBoxContainer .MuiCheckbox-root {
  padding-bottom: 0;
}

.iconContainer img {
  height: 70px;
}

.imageBoxContainer .MuiCheckbox-root.MuiCheckbox-colorPrimary {
  color: white;
  color: hsl(221, 100%, 30%);
  align-self: flex-start;
}

.imageBoxContainer:nth-child(1) {
  background-color: hsla(222, 87%, 97%);
}

.imageBoxContainer:nth-child(2) {
  background-color: hsl(223, 68%, 94%);
}

.imageBoxContainer:nth-child(3) {
  background-color: hsl(223, 94%, 93%);
}

.imageBoxContainer:nth-child(4) {
  background-color: hsl(223, 100%, 90%);
}

.assets.bg_images {
  z-index: 0;
}

.variation_list {
  height: 40vh;
  overflow-y: scroll;
}

.addText {
  color: #6F6F6F;
  font-size: 16px;
  font-weight: 500;
  line-height: 21px;
  /* position: absolute;
  top: 4rem;
  left: 6vw; */
}

.checkBxTxt {
  display: inline;
  position: relative;
  left: 37vw;
  font-style: italic;
  font-weight: 500;
  color: rgba(0, 0, 0, 0.5);
}

.variation_list {
  padding-right: 20px;
}

.variation_list .inner_variation {
  border: 1px solid var(--Color-Primary);
  padding: 20px 20px;
  border-radius: 15px;
}

